Migrating Eclipse structures to Eclipse 4.7.1a